examples/test/testpolicy17610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17610
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key4: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value43
      podSelector:
        matchLabels:
          key47: value27
          key9: value15
          key10: value27
